# deep-research-agent

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  deep_research.py  deep_research_manager.py  email_agent.py  gradio_ui.py  guardrails_config.json  planner_agent.py  pyproject.toml  requirements.txt  research_manager.py  search_agent.py  usage_tracker.py  writer_agent.py
.github/workflows/: huggingface_sync.yml  publish.yml
