[project]
name = "deep-research-agent"
version = "0.1.0"
description = "An autonomous multi-agent AI pipeline that researches any topic on the web, synthesizes a detailed report, and delivers it to your inbox."
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.10.0",
    "openai-agents>=0.13.1",
]
